--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ rand = "0.8"
 clap = { version = "3.0", features = ["color", "derive"]}
 log = "0.4"
 env_logger = "0.9"
-keccak = { version = "0.1", optional = true }
+
 parking = { package = "parking_lot", version = "0.12", optional = true }
 shuttle = { version = "0.2.0", optional = true }
 libloading = "0.7"
@@ -52,10 +52,16 @@ time = { version = "0.3", features = ["formatting", "macros"] }
 blake3 = "1.5.4"
 wasm-bindgen = "0.2.94"
 faster-hex = "0.10.0"
-kaspa-utils = "0.15.0"
-kaspa-consensus-core = "0.15.0"
-kaspa-hashes = "0.15.0"
-kaspa-math = "0.15.0"
+async-stream = "0.3.6"
+slab = "0.4"
+keccak = { version = "0.1.5", optional = true }
+kaspa-hashes = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
+kaspa-pow = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
+kaspa-rpc-core = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
+kaspa-grpc-core = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
+kaspa-grpc-client = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
+kaspa-p2p-lib = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
+kaspa-consensus-core = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
 
 [features]
 default = ["parking_lot"]
